# rust-ratelimiting

./: .gitignore  Cargo.toml  README.md
src/: bucket_state.rs  dist_rate_limit_store.rs  lib.rs  rate_limit_store.rs  rate_limit_strategy.rs  sliding_window_rate_limit_strategy.rs  time_window.rs  update_anchor.rs  update_line.rs  update_message.rs  update_package.rs  update_state.rs  update_tracker.rs
src/bucket/: bucket.rs  bucket_state.rs  mod.rs  sliding_window_rate_limit_strategy.rs
src/periodic/: global_increment.rs  mod.rs  periodic_update_strategy.rs  periodic_update_tracker.rs  random_update_strategy.rs  update_settings.rs  update_state.rs  update_strategy.rs  update_tracker.rs  update_value.rs
src/ratelimiting/: dist_bucket_factory.rs  dist_bucket_state.rs  dist_rate_limit_store.rs  mod.rs  rate_limit_status.rs  rate_limit_store.rs  rate_limit_strategy.rs  sliding_window_rate_limit_strategy.rs
src/store/: global_increment.rs  global_store.rs  mod.rs  periodic_update_tracker.rs  store_error.rs  update_state.rs  update_tracker.rs
src/store/redis/: mod.rs  redis_global_store.rs  redis_store.rs
src/tests/: bucket_state_tests.rs  dist_rate_limit_store.rs  mod.rs  window_tests.rs
src/time/: mod.rs  time_window.rs
