[package]
name = "ratelimiting"
version = "0.2.0"
authors = ["Maté Antunovic <Mate_Antunovic@bnz.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chashmap = "2.2.2"
chrono = "0.4.1"
redis = "0.15.1"
rand = "0.7.3"
